--- a/src/components/NavSidebar.css
+++ b/src/components/NavSidebar.css
@@ -44,7 +44,7 @@
 .nav-text {
   color: white;
   font-size: 14px;
-  font-weight: 100;
+  font-weight: 200;
   padding: 3px;
   padding-left: 30px;
   letter-spacing: 1px;
