--- a/src/components/ZoneDetail.css
+++ b/src/components/ZoneDetail.css
@@ -26,7 +26,7 @@
 	margin-top: 4px;
 
 	font-size: 18px;
-	font-weight: 100;
+	font-weight: 200;
 	color: #93A8AC;
 }
 
